fix(Select): stretch SelectValue primitive

--- a/packages/frosted-ui/src/components/select/select.css
+++ b/packages/frosted-ui/src/components/select/select.css
@@ -18,6 +18,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  flex: 1;
 }
 
 .fui-SelectIcon {
